# KMIDS-TDF-WRO-Future-Engineers-2024

./: .gitattributes  .gitignore  .gitmodules  Car_Assembly.iam  Front_Bridge.ipt  Front_Wheel_Anchor.ipt  Front_Wheel_Anchor_MIR.ipt  Lower_Chassis.ipt  Motor_Lego_Axle_Connector.ipt  README.md  Servo_Steering_Linkage.ipt  Servo_Steering_Linkage_MIR.ipt  Steering_Linkage.ipt  Steering_Servo_Linkage.ipt  Wheel_Lego_Axle_Connector.ipt  level.tscn  platformio.ini  project.godot  pull_request_template.md  test
4519 DkStone Technic Axle 3/: 4519 DkStone Technic Axle 3.ipt
Blender/: Car_Assembly.blend  Car_Assembly.mtl  Game_Mat.ipt  Game_Mat.mtl  Game_Mat.stl  Game_Mat_Inner_Wall.blend  Game_Mat_Inner_Wall.ipt  Game_Mat_Inner_Wall.stl  Game_Mat_Outer_Wall.blend  Game_Mat_Outer_Wall.blend1  Game_Mat_Outer_Wall.ipt  Game_Mat_Outer_Wall.stl  Green_Traffic_Light.blend  Green_Traffic_Light.blend1  Red_Traffic_Light.blend  Red_Traffic_Light.blend1  Traffic_Light.ipt  Traffic_Light.stl
Cura/: CE3E3V2_Front_Bridge.3mf  CE3E3V2_Front_Wheel_Anchor.3mf  CE3E3V2_Lego_Frame_Holder.3mf  CE3E3V2_Lego_Frame_Holder_Extra_2.3mf  CE3E3V2_Lower_Chassis.3mf  CE3E3V2_Misc.3mf  CE3E3V2_Motor_Lego_Axle_Connector.3mf  CE3E3V2_Servo_Steering_Linkage.3mf  CE3PRO_Front_Part.3mf  CE3PRO_Lower_Chassis.3mf  Ender 3 V2 Profile.curaprofile  Ender 3 V2 Rough Profile.curaprofile  Ender 3 V2 Speed Profile.curaprofile  Front_Part.3mf
Cura-Files/: CE3V3KE_AxleHolderBody.3mf  CE3V3KE_BackWheelAxle.3mf  CE3V3KE_BackWheelConnector.3mf  CE3V3KE_BackWheelStopper.3mf  CE3V3KE_BottomChassisBody.3mf  CE3V3KE_LeftBackWheelAxle.3mf  CE3V3KE_LidarHolder.3mf  CE3V3KE_MotorGear-MotorGearBody.3mf  CE3V3KE_MotorHolder.3mf  CE3V3KE_RightBackWheelAxle.3mf  CE3V3KE_TBoneLinkageBody.3mf  CE3V3KE_TopChassisBody.3mf  CE3V3KE_TransferLinkage.3mf  CE3V3KE_WheelLinakage.3mf  CE3V3KE_WheelStopper.3mf
Ender_3_V3_STL_and_Slicer_Files/: 1.5_base.cxprj  1.5_base.stl  2_Base.stl  2_base.cxprj  Front_Bridge.cxprj  Front_Bridge.stl  Front_Bridge_2.cxprj  Front_Bridge_2.stl  Front_Wheel_Anchor.cxprj  Front_Wheel_Anchor.stl  Front_Wheel_Anchor_MIR.stl  Front_Wheel_Support_2_Test.stl  Front_Wheel_Support_Test.cxprj  Front_Wheel_Support_Test.stl  Lego-Frame-Holder-Extra-Extra.stl  Lego_Frame_Holder.cxprj  Lego_Frame_Holder.stl  Lego_Frame_Holder_Extra.stl  Lego_Frame_Holder_Extra_2.stl  Lower_Chassis.cxprj  Lower_Chassis.stl  Lower_Chassis_Pin.cxprj  Lower_Chassis_Pin_1.stl  Lower_Chassis_Pin_2.stl  Motor_Lego_Axle_Connector.stl  Parking_Area.cxprj  Parking_Area.stl  SG90_Horn.cxprj  SG90_Horn.stl  Servo_Steering_Linkage.cxprj  Servo_Steering_Linkage.stl  Traffic_Light.cxprj  Traffic_Light.stl  Wheel_Lego_Axle_Connector.cxprj  Wheel_Lego_Axle_Connector.stl  Wheel_Lego_Axle_Connector_2.stl  diff_gear_holder.cxprj  diff_gear_holder.stl  diff_gear_holder_2.cxprj  diff_gear_holder_2.stl  (+4 more)
Godot-WRO-Future-Engineers-2024-Simulator/: WRO-Future-Engineers-Simulator.csproj  WRO-Future-Engineers-Simulator.sln  level.tscn  project.godot
Godot-WRO-FutureEngineers-2024-Simulator/: icon.svg.import
Inventor/: 1.5_base.ipt  1.5_base_2.ipt  2_Base.ipt  Car_Assembly.iam  Car_Plan.ipt  Front_Bridge.ipt  Front_Bridge_2.ipt  Front_Wheel_Anchor.ipt  Front_Wheel_Anchor_MIR.ipt  Front_Wheel_Support_2_Test.ipt  Front_Wheel_Support_Test.ipt  Lego-Frame-Holder-Extra-Extra.ipt  Lego_Frame_Holder.ipt  Lego_Frame_Holder_Extra.ipt  Lego_Frame_Holder_Extra_2.ipt  Lower_Chassis.ipt  Lower_Chassis_Pin_1.ipt  Lower_Chassis_Pin_2.ipt  Motor_Lego_Axle_Connector.ipt  Parking_Area.ipt  SG90_Horn.ipt  Servo_Steering_Linkage.ipt  Servo_Steering_Linkage.stl  Traffic_Light.ipt  Wheel.ipt  Wheel_Lego_Axle_Connector.ipt  Wheel_Lego_Axle_Connector_2.ipt  Wheel_MIR.ipt  diff_gear_holder.ipt  diff_gear_holder_2.ipt  diff_gear_holder_3.ipt  diff_gear_holder_4.ipt
KMIDS-TDF-WRO2024-FreeCAD/: Assembly.Gui.xml  Assembly.xml  Binder.xml  Binder001.xml  Binder002.xml  Binder003.xml  Body.Gui.xml  Body.xml  Body001.Gui.xml  Body001.xml  Body002.Gui.xml  Body002.xml  Body003.Gui.xml  Body003.xml  Clone.Gui.xml  Clone.xml  Constraint.xml  Constraint001.xml  Constraint002.xml  Constraint003.xml  Constraints.xml  Document.xml  ElementLink.xml  ElementLink001.xml  ElementLink002.xml  ElementLink003.xml  ElementLink004.xml  ElementLink005.xml  ElementLink006.xml  Elements.xml  Group.Gui.xml  Group.xml  GuiDocument.xml  Origin.xml  Origin001.Gui.xml  Origin001.xml  Origin002.Gui.xml  Origin002.xml  Origin003.Gui.xml  Origin003.xml  (+109 more)
Lego Beam Fram 5x7 (64179)/: Lego Beam Fram 5x7 (64179).ipt
Models/: Car_Assembly.obj.import  Game_Mat.glb.import  parking_wall.glb  parking_wall.glb.import
OldVersions/: Car_Plan.0025.ipt  (+26 more)
RaspberryPi5/RaspberryPi5-Code/: CMakeLists.txt
RaspberryPi5/RaspberryPi5-Code/src/: dataSaver.h  main_cam_testv1.cpp  main_lidar_testv1.cpp  main_load_lidar_file.cpp  main_move_testv1.cpp  main_obstacleChallenge.cpp  main_openChallenge.cpp  main_record_testv1.cpp  main_testv1.cpp
RaspberryPi5/RaspberryPi5-Code/src/challenges/: obstacleChallenge.cpp  obstacleChallenge.h  openChallenge.cpp  openChallenge.h
RaspberryPi5/RaspberryPi5-Code/src/utils/: PIDController.cpp  bno055_struct.h  dataSaver.cpp  dataSaver.h  direction.cpp  direction.h  i2c_master.cpp  i2c_master.h  imageProcessor.cpp  imageProcessor.h  libCamera.cpp  libCamera.h  lidarController.cpp  lidarController.h  lidarDataProcessor.cpp  lidarDataProcessor.h  lidar_struct.h
RaspberryPi5/TestRobotMovement/: CMakeLists.txt
RaspberryPi5/TestRobotMovement/src/: i2c_master.cpp  i2c_master.h  main.cpp
RaspberryPi5/TestV1/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
RaspberryPi5/TestV1/src/: i2c_master.h  lidarController.cpp  lidarController.h  main.cpp
RaspberryPiPico/TestV1/: .gitignore  CMakeLists.txt
RaspberryPiPico/TestV1/BNO055_driver/: bno055.c  bno055.h
RaspberryPiPico/TestV1/libs/BNO055_driver/: CMakeLists.txt
RaspberryPiPico/TestV1/src/: bno055Utils.cpp  bno055Utils.h  bno055_utils.cpp  bno055_utils.h  debug_print.h  i2c_slave_utils.cpp  i2c_slave_utils.h  main.cpp  pwm_utils.cpp  pwm_utils.h
(+3886 files in other folders)
